Mejorar detección offline y refactorizar motor de escaneo
Corrige el descubrimiento mDNS y NetBIOS, incorpora detección TCP para dispositivos que bloquean ICMP, utiliza el prefijo real de la red, mejora SSDP y centraliza la fusión de identidades. Reduce la dependencia de ARP/OUI a enriquecimiento opcional, agrega cancelación efectiva del escaneo y pruebas unitarias para parsers y lógica crítica.